--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "CameraDebug",
+            "request": "launch",
+            "mainClass": "com.minecraftclone.CameraDebug",
+            "projectName": "minecraft-clone"
+        },
+        {
+            "type": "java",
             "name": "Current File",
             "request": "launch",
             "mainClass": "${file}"
@@ -14,7 +21,7 @@
             "type": "java",
             "name": "App",
             "request": "launch",
-            "mainClass": "com.minecraftclone.App", 
+            "mainClass": "com.minecraftclone.App",
             "projectName": "minecraft-clone",
             "vmArgs": [
                 "-Dnativewindow.debug.GraphicsConfiguration=true",
@@ -24,6 +31,6 @@
                 "--add-exports=java.desktop/sun.java2d=ALL-UNNAMED",
                 "--add-opens=java.desktop/java.awt=ALL-UNNAMED"
             ]
-        },
+        }
     ]
 }
