--- a/pom.xml
+++ b/pom.xml
@@ -7,43 +7,32 @@
 
   <groupId>com.minecraftclone</groupId>
   <artifactId>minecraft-clone</artifactId>
-  <version>0.1</version>
+  <version>0.1-SNAPSHOT</version>
 
   <name>minecraft-clone</name>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-
-    <!-- Target Java 21 -->
     <maven.compiler.release>25</maven.compiler.release>
   </properties>
 
   <dependencies>
     <dependency>
-      <groupId>com.gloop</groupId>
-      <artifactId>gloop</artifactId>
-      <version>1.0</version>
+      <groupId>org.jmonkeyengine</groupId>
+      <artifactId>jme3-core</artifactId>
+      <version>3.9.0-stable</version>
     </dependency>
     <dependency>
-      <groupId>org.jogamp.gluegen</groupId>
-      <artifactId>gluegen-rt-main</artifactId>
-      <version>2.3.2</version>
+      <groupId>org.jmonkeyengine</groupId>
+      <artifactId>jme3-desktop</artifactId>
+      <version>3.9.0-stable</version>
     </dependency>
     <dependency>
-      <groupId>com.gluegenrt</groupId>
-      <artifactId>gluegenrtwinamd64</artifactId>
-      <version>1.0</version>
+      <groupId>org.jmonkeyengine</groupId>
+      <artifactId>jme3-lwjgl3</artifactId>
+      <version>3.9.0-stable</version>
     </dependency>
-    <dependency>
-      <groupId>org.jogamp.jogl</groupId>
-      <artifactId>jogl-all-main</artifactId>
-      <version>2.3.2</version>
-    </dependency>
-    <dependency>
-      <groupId>com.jogl</groupId>
-      <artifactId>joglwinamd64</artifactId>
-      <version>1.0</version>
-    </dependency>
+
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
