removed unnecessary code, updated todo, unified version structure

--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 
   <groupId>com.minecraftclone</groupId>
   <artifactId>minecraft-clone</artifactId>
-  <version>0.2-alpha</version>
+  <version>v0.2.0-alpha</version>
 
   <name>minecraft-clone</name>
 
