--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,11 @@
 
   <dependencies>
     <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.13.2</version>
+    </dependency>
+    <dependency>
       <groupId>org.jmonkeyengine</groupId>
       <artifactId>jme3-core</artifactId>
       <version>3.9.0-stable</version>
