--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,5 @@ target/
 hs_err_pid*
 replay_pid*
 target/original-minecraft-clone-0.1-SNAPSHOT.jar
+
+erstheelDesktopMeine SachenCodeJavaminecraft-clone*
