Added semi-vibecoded perlin noise generator for world generation + seeds

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -278,5 +278,6 @@
     },
     "terminal.integrated.defaultProfile.windows": "Git Bash",
     "terminal.integrated.initialHint": false,
-    "workbench.activityBar.location": "top"
+    "workbench.activityBar.location": "top",
+    "java.jdt.ls.vmargs": "-XX:+UseParallelGC -XX:GCTimeRatio=4 -XX:AdaptiveSizePolicyWeight=90 -Dsun.zip.disableMemoryMapping=true -Xmx4G -Xms100m -Xlog:disable"
 }
